<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/space30"
                android:background="@color/colorBlackF5"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/space15"
                android:text="@string/txt_groupChat_createGroup"
                android:textColor="@color/colorBlck999"
                android:textSize="@dimen/text_size_small" />

            <ListView
                android:id="@+id/lv_groupChat_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/space30"
                android:layout_marginTop="@dimen/space20"
                android:background="@color/colorBlackF5"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/space15"
                android:text="@string/txt_groupChat_mineGroup"
                android:textColor="@color/colorBlck999"
                android:textSize="@dimen/text_size_small" />

            <ListView
                android:id="@+id/lv_groupChat_mine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/space30"
                android:layout_marginTop="@dimen/space20"
                android:background="@color/colorBlackF5"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/space15"
                android:text="@string/txt_groupChat_otherGroup"
                android:textColor="@color/colorBlck999"
                android:textSize="@dimen/text_size_small" />

            <ListView
                android:id="@+id/lv_groupChat_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
</LinearLayout>