<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWrite">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space20"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/colorBlack333"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/please_select_industry"
                android:textColor="@color/colorBlack333"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/space20"
                android:gravity="center"
                android:padding="@dimen/space5"
                android:text="@string/sure"
                android:textColor="@color/colorBlack333"
                android:textSize="14dp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space45"
            android:scrollbars="none">
            <com.yst.im.imchatlibrary.base.baseview.ImTagFlowLayout
                android:id="@+id/flowLayout_industry"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>

    </RelativeLayout>
</RelativeLayout>