<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWrite"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space22" />

    <com.yst.im.imchatlibrary.base.baseview.AbstractTitleView
        android:id="@+id/titleView_add_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space44"
        android:background="@color/colorWrite"
        title:left_image="@mipmap/back_title_right"
        title:title_text_color="@color/colorBlack333"
        title:title_text_size="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space45"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_add_friend"
            android:layout_width="@dimen/space0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/txt_input_find_friend"
            android:textColor="@color/text_select_color"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/txt_add_group"
            android:layout_width="@dimen/space0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/txt_input_find_group"
            android:textColor="@color/text_select_color"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <com.yst.im.imchatlibrary.widget.ClearEditText
        android:id="@+id/edt_add_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space44"
        android:paddingLeft="@dimen/space15"
        android:background="@color/colorWrite"
        android:drawableLeft="@drawable/icon_search"
        android:hint="@string/txt_new_group"
        android:singleLine="true"
        android:textColorHint="@color/colorffd7d7d7"
        android:textSize="@dimen/text_size_14sp"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/space10"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space1"
        android:background="@color/colorffeeeeee" />
</LinearLayout>
